--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,6 +9,17 @@
 </head>
 
 <body>
+  <nav>
+    <h2>
+      <a href="/">Home</a>
+    </h2>
+    <h2>
+      <a href="dashboard route">Dashboard</a>
+    </h2>
+    <h2>
+      <a href="login-route">Login</a>
+    </h2>
+  </nav>
   <div class="wrapper">
     <header>
       <h1>
