--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,8 +21,15 @@
         <h2>
           <a href="dashboard route">Dashboard</a>
         </h2>
+        {{#if loggedIn}}
+        <h2>
         <button id="logout" class="btn-no-style">Logout</button>
-        <a href="/login">login</a>
+        </h2>
+        {{else}}
+        <h2>
+        <a href="/login">Login</a>
+        </h2>
+        {{/if}}
      </nav>
     </header>
     
@@ -33,8 +40,10 @@
       Thanks for visiting!
     </footer>
   </div>
-  
+
+{{#if loggedIn}}  
 <script src="/javascript/logout.js"></script>
+{{/if}}
 </body>
 
 </html>
