working on dashboard

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,10 +18,10 @@
         <h2>
           <a href="/">Home</a>
         </h2>
-        <h2>
-          <a href="dashboard route">Dashboard</a>
-        </h2>
         {{#if loggedIn}}
+        <h2>
+          <a href="/dashboard">Dashboard</a>
+        </h2>
         <h2>
         <button id="logout" class="btn-no-style">Logout</button>
         </h2>
