--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -9,7 +9,7 @@
       <div class="meta">
         Posted by {{user.username}} on
         {{format_date created_at}}
-        <a href="/post/{{id}}">{{comments.length}} comment(s)</a>
+        <a href="/post/{{id}}">{{comments.length}} {{format_plural "comment" comments.length}}  </a>
       </div>
     </article>
   </li>
