--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -31,6 +31,7 @@
           <a href="/post/{{id}}">{{comments.length}} {{format_plural "comment" comments.length}}</a>
         </div>
       </article>
+      <a href="/dashboard/edit/{{id}}" class="edit-link">Edit post</a>
     </li>
     {{/each}}
   </ol>
